# videocapture

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile.full  Dockerfile.opencv  FFmpegCapture_8cpp.html  FFmpegCapture_8cpp__incl.map  FFmpegCapture_8cpp__incl.md5  FFmpegCapture_8hpp.html  FFmpegCapture_8hpp__dep__incl.map  FFmpegCapture_8hpp__dep__incl.md5  FFmpegCapture_8hpp__incl.map  FFmpegCapture_8hpp__incl.md5  FFmpegCapture_8hpp_source.html  GStreamerCapture_8cpp.html  GStreamerCapture_8cpp__incl.map  GStreamerCapture_8cpp__incl.md5  GStreamerCapture_8hpp.html  GStreamerCapture_8hpp__dep__incl.map  GStreamerCapture_8hpp__dep__incl.md5  GStreamerCapture_8hpp__incl.map  GStreamerCapture_8hpp__incl.md5  GStreamerCapture_8hpp_source.html  GStreamerOpenCV_8cpp.html  GStreamerOpenCV_8cpp__incl.map  GStreamerOpenCV_8cpp__incl.md5  GStreamerOpenCV_8hpp.html  GStreamerOpenCV_8hpp__dep__incl.map  GStreamerOpenCV_8hpp__dep__incl.md5  GStreamerOpenCV_8hpp__incl.map  GStreamerOpenCV_8hpp__incl.md5  GStreamerOpenCV_8hpp_source.html  LICENSE  OpenCVCapture_8cpp.html  OpenCVCapture_8cpp__incl.map  OpenCVCapture_8cpp__incl.md5  OpenCVCapture_8hpp.html  (+86 more)
.github/: lsan.supp  markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  ci.yml  cmake-single-platform.yml  coverage.yml  dependency-check.yml  docker.yml  docs.yml  format.yml  release.yml
app/: CMakeLists.txt  main.cpp
cmake/: DependencyValidation.cmake  FFmpeg.cmake  GStreamer.cmake  versions.cmake
docs/: CI_CD.md  CI_CD_QUICKSTART.md  DEPENDENCY_MANAGEMENT.md
include/: VideoCaptureFactory.hpp  VideoCaptureInterface.hpp
scripts/: setup_dependencies.sh  setup_ffmpeg.sh  setup_gstreamer.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js
src/: VideoCaptureFactory.cpp
src/ffmpeg/: FFmpegCapture.cpp  FFmpegCapture.hpp
src/gstreamer/: GStreamerCapture.cpp  GStreamerCapture.hpp  GStreamerOpenCV.cpp  GStreamerOpenCV.hpp
src/opencv/: OpenCVCapture.cpp  OpenCVCapture.hpp
tests/: CMakeLists.txt  test_factory.cpp  test_ffmpeg.cpp  test_gstreamer.cpp  test_main.cpp  test_opencv.cpp
